# Course_work_3

./: README.md  pyproject.toml
src/: keys.py  main.py  utils.py
tests/: test_main.py  test_utils.py
